--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,10 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 websockets==15.0.1
 yarl==1.22.0
+streamlit
+pandas
+plotly
+matplotlib
+scipy
+statsmodels
+
